[package]
name = "yokai"
version = "0.1.0"
edition = "2024"

[dependencies]
url = "2.5.7"
actix-web = "4"
sha2 = "0.10.8"
bcrypt = "0.17.1"
chrono = "0.4.42"
base64 = "0.22.1"
openssl = "0.10.73"
actix-cors = "0.7.0"
actix-files = "0.6.8"
serde_json = "1.0.145"
actix-multipart = "0.7.2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.23", features=["json"] }
serde = { version = "1.0.214", features = ["derive"] }
cliply = { git = "https://github.com/alyxshang/cliply", tag = "v.0.1.0" }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }
