[package]
name = "yokai-backend"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
author = ["Alyx Shang"]
description= "The backend for Yokai."
homepage = "https://github.com/alyxshang/yokai"
repository = "https://github.com/alyxshang/yokai"
readme = "../README.markdown"

[dependencies]
actix-web = "4"
sha2 = "0.10.8"
bcrypt = "0.17.1"
chrono = "0.4.42"
base64 = "0.22.1"
openssl = "0.10.73"
actix-cors = "0.7.0"
actix-files = "0.6.8"
actix-multipart = "0.7.2"
serde = { version = "1.0.214", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
